--- a/Resources/css/site.css
+++ b/Resources/css/site.css
@@ -7,11 +7,38 @@ header {
   position: fixed;
   top: 0;
   left: 0;
-  height: 5vh;
+  height: 7vh;
   width: 100vw;
   background-color: #000000;
   color: #ffffff;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+header .logo {
+  float: left;
+  z-index: 0;
+  height: 100%;
+  width: 20vw;
+  margin: 0;
+  background: #000000;
+  position: relative;
+  overflow: hidden;
+}
+header .logo img {
+  position: absolute;
+  top: -9999px;
+  bottom: -9999px;
+  left: -9999px;
+  right: -9999px;
+  margin: auto;
+}
+header #navHighlight {
+  position: absolute;
+  left: 105vw;
+  z-index: -1;
+  width: 5vw;
+  height: 100%;
+  margin: 0;
+  background: #484848;
 }
 header ul {
   list-style: none;
@@ -19,25 +46,31 @@ header ul {
   height: 100%;
   margin: 0;
   padding: 0;
+  z-index: -1;
 }
 header li {
-  float: left;
+  float: right;
   height: 100%;
   width: 5%;
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1;
 }
 header a {
   text-align: center;
   display: block;
   padding: 2em 1em;
   margin: auto;
+  z-index: 1;
+}
+header li:hover {
+  cursor: pointer;
 }
 
 body {
   position: fixed;
-  top: 5vh;
+  top: 7vh;
   height: 95vh;
   width: 100vw;
   color: #ffffff;
